OpenAPI schema updates; search improvements
